--- a/crds.yaml
+++ b/crds.yaml
@@ -43,3 +43,39 @@ spec:
                         type: string
           required:
             - spec
+---
+apiVersion: apiextensions.k8s.io/v1
+kind: CustomResourceDefinition
+metadata:
+  name: prefectworkpools.prefect.io
+spec:
+  group: prefect.io
+  scope: Namespaced
+  names:
+    plural: prefectworkpools
+    singular: prefectworkpool
+    kind: PrefectWorkPool
+  versions:
+    - name: v3
+      served: true
+      storage: true
+      schema:
+        openAPIV3Schema:
+          type: object
+          properties:
+            spec:
+              type: object
+              properties:
+                server:
+                  type: object
+                  properties:
+                    namespace:
+                      type: string
+                    name:
+                      type: string
+                  required:
+                    - name
+                workers:
+                  type: number
+          required:
+            - spec
