--- a/requirements.txt
+++ b/requirements.txt
@@ -4,49 +4,142 @@ aiohttp==3.9.5
     # via kopf
 aiosignal==1.3.1
     # via aiohttp
+aiosqlite==0.20.0
+    # via prefect
+alembic==1.13.1
+    # via prefect
 annotated-types==0.7.0
     # via pydantic
+anyio==4.4.0
+    # via
+    #   httpx
+    #   prefect
+    #   starlette
+    #   watchfiles
+apprise==1.8.0
+    # via prefect
+asgi-lifespan==2.1.0
+    # via prefect
 asttokens==2.4.1
     # via stack-data
+async-timeout==4.0.3
+    # via asyncpg
+asyncpg==0.29.0
+    # via prefect
 attrs==23.2.0
-    # via aiohttp
+    # via
+    #   aiohttp
+    #   jsonschema
+    #   referencing
 cachetools==5.3.3
-    # via google-auth
+    # via
+    #   google-auth
+    #   prefect
 certifi==2024.6.2
     # via
+    #   apprise
+    #   httpcore
+    #   httpx
     #   kubernetes
     #   requests
+cffi==1.16.0
+    # via cryptography
 cfgv==3.4.0
     # via pre-commit
 charset-normalizer==3.3.2
     # via requests
 click==8.1.7
     # via
+    #   apprise
     #   kopf
     #   maison
+    #   prefect
+    #   typer
+    #   uvicorn
     #   yamlfix
+cloudpickle==3.0.0
+    # via prefect
+colorama==0.4.6
+    # via griffe
+coolname==2.2.0
+    # via prefect
+croniter==2.0.5
+    # via prefect
+cryptography==42.0.8
+    # via prefect
+dateparser==1.2.0
+    # via prefect
 decorator==5.1.1
     # via ipython
 distlib==0.3.8
     # via virtualenv
 distro==1.9.0
     # via ruyaml
+dnspython==2.6.1
+    # via email-validator
+docker==7.1.0
+    # via prefect
+email-validator==2.1.1
+    # via fastapi
+exceptiongroup==1.2.1
+    # via prefect
 executing==2.0.1
     # via stack-data
+fastapi==0.111.0
+    # via prefect
+fastapi-cli==0.0.4
+    # via fastapi
 filelock==3.14.0
     # via virtualenv
 frozenlist==1.4.1
     # via
     #   aiohttp
     #   aiosignal
+fsspec==2024.6.0
+    # via prefect
 google-auth==2.30.0
     # via kubernetes
+graphviz==0.20.3
+    # via prefect
+greenlet==3.0.3
+    # via sqlalchemy
+griffe==0.45.3
+    # via prefect
+h11==0.14.0
+    # via
+    #   httpcore
+    #   uvicorn
+h2==4.1.0
+    # via httpx
+hpack==4.0.0
+    # via h2
+httpcore==1.0.5
+    # via
+    #   httpx
+    #   prefect
+httptools==0.6.1
+    # via uvicorn
+httpx==0.27.0
+    # via
+    #   fastapi
+    #   prefect
+humanize==4.9.0
+    # via
+    #   jinja2-humanize-extension
+    #   prefect
+hyperframe==6.0.1
+    # via h2
 identify==2.5.36
     # via pre-commit
 idna==3.7
     # via
+    #   anyio
+    #   email-validator
+    #   httpx
     #   requests
     #   yarl
+importlib-resources==6.1.3
+    # via prefect
 iniconfig==2.0.0
     # via pytest
 ipython==8.25.0
@@ -55,14 +148,43 @@ iso8601==2.1.0
     # via kopf
 jedi==0.19.1
     # via ipython
+jinja2==3.1.4
+    # via
+    #   fastapi
+    #   jinja2-humanize-extension
+    #   prefect
+jinja2-humanize-extension==0.4.0
+    # via prefect
+jsonpatch==1.33
+    # via prefect
+jsonpointer==2.4
+    # via jsonpatch
+jsonschema==4.22.0
+    # via prefect
+jsonschema-specifications==2023.12.1
+    # via jsonschema
 kopf==1.37.2
     # via -r requirements.in
-kubernetes==30.1.0
-    # via -r requirements.in
+kubernetes==29.0.0
+    # via
+    #   -r requirements.in
+    #   prefect
 maison==1.4.3
     # via yamlfix
+mako==1.3.5
+    # via alembic
+markdown==3.6
+    # via apprise
+markdown-it-py==3.0.0
+    # via rich
+markupsafe==2.1.5
+    # via
+    #   jinja2
+    #   mako
 matplotlib-inline==0.1.7
     # via ipython
+mdurl==0.1.2
+    # via markdown-it-py
 multidict==6.0.5
     # via
     #   aiohttp
@@ -77,10 +199,20 @@ oauthlib==3.2.2
     # via
     #   kubernetes
     #   requests-oauthlib
-packaging==24.0
-    # via pytest
+orjson==3.10.3
+    # via
+    #   fastapi
+    #   prefect
+packaging==24.1
+    # via
+    #   prefect
+    #   pytest
 parso==0.8.4
     # via jedi
+pathspec==0.12.1
+    # via prefect
+pendulum==3.0.0
+    # via prefect
 pexpect==4.9.0
     # via ipython
 platformdirs==4.2.2
@@ -88,6 +220,8 @@ platformdirs==4.2.2
 pluggy==1.5.0
     # via pytest
 pre-commit==3.7.1
+    # via -r requirements.in
+prefect==3.0.0rc2
     # via -r requirements.in
 prompt-toolkit==3.0.46
     # via ipython
@@ -101,74 +235,188 @@ pyasn1==0.6.0
     #   rsa
 pyasn1-modules==0.4.0
     # via google-auth
+pycparser==2.22
+    # via cffi
 pydantic==2.7.3
     # via
     #   -r requirements.in
+    #   fastapi
     #   maison
+    #   prefect
+    #   pydantic-extra-types
+    #   pydantic-settings
 pydantic-core==2.18.4
-    # via pydantic
+    # via
+    #   prefect
+    #   pydantic
+pydantic-extra-types==2.8.0
+    # via prefect
+pydantic-settings==2.3.1
+    # via prefect
 pygments==2.18.0
-    # via ipython
+    # via
+    #   ipython
+    #   rich
 pytest==8.2.2
     # via -r requirements.in
 python-dateutil==2.9.0.post0
-    # via kubernetes
+    # via
+    #   croniter
+    #   dateparser
+    #   kubernetes
+    #   pendulum
+    #   prefect
+    #   time-machine
+python-dotenv==1.0.1
+    # via
+    #   pydantic-settings
+    #   uvicorn
 python-json-logger==2.0.7
     # via kopf
+python-multipart==0.0.9
+    # via fastapi
+python-slugify==8.0.4
+    # via prefect
+pytz==2024.1
+    # via
+    #   croniter
+    #   dateparser
+    #   prefect
 pyyaml==6.0.1
     # via
     #   -r requirements.in
+    #   apprise
     #   kopf
     #   kubernetes
     #   pre-commit
+    #   prefect
+    #   uvicorn
+readchar==4.1.0
+    # via prefect
+referencing==0.35.1
+    # via
+    #   jsonschema
+    #   jsonschema-specifications
+regex==2024.5.15
+    # via dateparser
 requests==2.32.3
     # via
+    #   apprise
+    #   docker
     #   kubernetes
     #   requests-oauthlib
 requests-oauthlib==2.0.0
-    # via kubernetes
+    # via
+    #   apprise
+    #   kubernetes
+rfc3339-validator==0.1.4
+    # via prefect
+rich==13.7.1
+    # via
+    #   prefect
+    #   typer
+rpds-py==0.18.1
+    # via
+    #   jsonschema
+    #   referencing
 rsa==4.9
     # via google-auth
+ruamel-yaml==0.18.6
+    # via prefect
+ruamel-yaml-clib==0.2.8
+    # via ruamel-yaml
 ruff==0.4.8
     # via -r requirements.in
 ruyaml==0.91.0
     # via yamlfix
 setuptools==70.0.0
     # via ruyaml
+shellingham==1.5.4
+    # via typer
 six==1.16.0
     # via
     #   asttokens
     #   kubernetes
     #   python-dateutil
+    #   rfc3339-validator
+sniffio==1.3.1
+    # via
+    #   anyio
+    #   asgi-lifespan
+    #   httpx
+    #   prefect
+sqlalchemy==2.0.30
+    # via
+    #   alembic
+    #   prefect
 stack-data==0.6.3
     # via ipython
+starlette==0.37.2
+    # via fastapi
+text-unidecode==1.3
+    # via python-slugify
+time-machine==2.14.1
+    # via pendulum
 toml==0.10.2
-    # via maison
+    # via
+    #   maison
+    #   prefect
 traitlets==5.14.3
     # via
     #   ipython
     #   matplotlib-inline
+typer==0.12.3
+    # via
+    #   fastapi-cli
+    #   prefect
 types-pyyaml==6.0.12.20240311
     # via -r requirements.in
 typing-extensions==4.12.2
     # via
+    #   aiosqlite
+    #   alembic
+    #   fastapi
     #   ipython
     #   kopf
     #   mypy
+    #   prefect
     #   pydantic
     #   pydantic-core
+    #   sqlalchemy
+    #   typer
+tzdata==2024.1
+    # via pendulum
+tzlocal==5.2
+    # via dateparser
+ujson==5.10.0
+    # via
+    #   fastapi
+    #   prefect
 urllib3==2.2.1
     # via
+    #   docker
     #   kubernetes
     #   requests
 uv==0.2.9
     # via -r requirements.in
+uvicorn==0.28.1
+    # via
+    #   fastapi
+    #   prefect
+uvloop==0.19.0
+    # via uvicorn
 virtualenv==20.26.2
     # via pre-commit
+watchfiles==0.22.0
+    # via uvicorn
 wcwidth==0.2.13
     # via prompt-toolkit
 websocket-client==1.8.0
     # via kubernetes
+websockets==12.0
+    # via
+    #   prefect
+    #   uvicorn
 yamlfix==1.16.0
     # via -r requirements.in
 yarl==1.9.4
