Supporting SQLite and PostreSQL more deliberately
For SQLite, we have to deploy the service as a `StatefulSet` with a bound
`PersistentVolume` holding the SQLite DB, whereas with PostgreSQL, we can
support deployments with multiple replicas.  In that case, we'll migrate with
a separate `Job` instead of attempting to migrate at server startup.

--- a/crds.yaml
+++ b/crds.yaml
@@ -20,6 +20,8 @@ spec:
             spec:
               type: object
               properties:
+                version:
+                  type: string
                 sqlite:
                   type: object
                   properties:
@@ -82,6 +84,8 @@ spec:
             spec:
               type: object
               properties:
+                version:
+                  type: string
                 server:
                   type: object
                   properties:
