--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,12 @@ requires-python = ">=3.11"
 
 dynamic = ["version"]
 
-[tool.setuptools_scm]
-version_file = "prefect_operator/_version.py"
-
 [project.scripts]
 prefect-operator = "prefect_operator.__main__:main"
+
+[tool.pytest.ini_options]
+minversion = "8.3"
+addopts = "--cov prefect_operator --cov tests --cov-branch --cov-report=term-missing"
+testpaths = [
+    "tests"
+]
