--- a/requirements.in
+++ b/requirements.in
@@ -1,17 +1,8 @@
+httpx
 kopf
 kubernetes
-prefect==3.0.0rc13
 pydantic
 pyyaml
+setuptools_scm
 
 -e .
-
-# development
-ipython
-mypy
-pre-commit
-pytest
-ruff
-types-pyyaml
-yamlfix
-uv
