--- a/.github/workflows/static-analysis.yaml
+++ b/.github/workflows/static-analysis.yaml
@@ -49,7 +49,7 @@ jobs:
       - name: Install packages
         run: |
           python -m pip install -U uv pre-commit
-          uv pip install --upgrade --system requirements-dev.txt
+          uv pip install --upgrade --system -r requirements-dev.txt
 
       - name: Run pre-commit
         run: pre-commit run --show-diff-on-failure --color=always --all-files
