--- a/.github/workflows/static-analysis.yaml
+++ b/.github/workflows/static-analysis.yaml
@@ -25,7 +25,8 @@ concurrency:
 jobs:
   pre-commit-checks:
     name: Pre-commit checks
-    runs-on: ubuntu-latest
+    runs-on:
+      group: oss-larger-runners
 
     steps:
       - uses: actions/checkout@v4
@@ -56,7 +57,8 @@ jobs:
 
   analyze:
     name: Analyze
-    runs-on: ubuntu-latest
+    runs-on:
+      group: oss-larger-runners
 
     permissions:
       contents: read
