--- a/.github/workflows/static-analysis.yaml
+++ b/.github/workflows/static-analysis.yaml
@@ -25,8 +25,7 @@ concurrency:
 jobs:
   pre-commit-checks:
     name: Pre-commit checks
-    runs-on:
-      group: oss-larger-runners
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v4
@@ -57,8 +56,7 @@ jobs:
 
   analyze:
     name: Analyze
-    runs-on:
-      group: oss-larger-runners
+    runs-on: ubuntu-latest
 
     permissions:
       contents: read
