--- a/.github/workflows/unit-tests.yaml
+++ b/.github/workflows/unit-tests.yaml
@@ -25,8 +25,7 @@ concurrency:
 jobs:
   unit-tests:
     name: Unit tests
-    runs-on:
-      group: oss-larger-runners
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v4
