--- a/.github/workflows/docker-images.yaml
+++ b/.github/workflows/docker-images.yaml
@@ -26,7 +26,7 @@ concurrency:
 
 jobs:
   unit-tests:
-    name: Unit tests
+    name: Docker images
     runs-on: ubuntu-latest
 
     steps:
@@ -34,6 +34,9 @@ jobs:
         with:
           persist-credentials: false
           fetch-depth: 0
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
       - name: Build and push image
         uses: docker/build-push-action@v6
