--- a/.github/workflows/docker-images.yaml
+++ b/.github/workflows/docker-images.yaml
@@ -46,6 +46,7 @@ jobs:
           tags: PrefectHQ/prefect-operator:latest
           push: false
           pull: true
+          load: true
 
       - name: Image smoke test
         run: docker run --rm PrefectHQ/prefect-operator:latest --version
