--- a/.github/workflows/unit-tests.yaml
+++ b/.github/workflows/unit-tests.yaml
@@ -49,7 +49,8 @@ jobs:
       - name: Install packages
         run: |
           python -m pip install -U uv pre-commit
-          uv pip install --upgrade --system -r requirements-dev.txt
+          uv pip install --system -r requirements-dev.txt
+          uv pip install --system -e .
 
       - name: Run pytest
         run: pytest
