--- a/.github/workflows/static-analysis.yaml
+++ b/.github/workflows/static-analysis.yaml
@@ -50,6 +50,7 @@ jobs:
         run: |
           python -m pip install -U uv pre-commit
           uv pip install --upgrade --system -r requirements-dev.txt
+          uv pip install --system -e .
 
       - name: Run pre-commit
         run: pre-commit run --show-diff-on-failure --color=always --all-files
