--- a/.github/workflows/docker-images.yaml
+++ b/.github/workflows/docker-images.yaml
@@ -35,14 +35,33 @@ jobs:
           persist-credentials: false
           fetch-depth: 0
 
+      - name: Get setuptools version
+        id: setuptools
+        shell: bash
+        run: |
+          python -m pip install setuptools_scm
+          echo "version=`python -m setuptools_scm`" >> "$GITHUB_OUTPUT"
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
+
+      - name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: PrefectHQ/prefect-operator
+          tags: |
+            type=pep440,pattern={{version}}
+            type=pep440,pattern={{major}}.{{minor}}
+            type=pep440,pattern={{major}}
+            type=raw,value=${{ steps.setuptools.outputs.version }}
+            type=raw,value=latest
 
       - name: Build and push image
         uses: docker/build-push-action@v6
         with:
           context: .
           platforms: linux/amd64,linux/arm64
-          tags: PrefectHQ/prefect-operator:latest
+          tags: ${{ steps.meta.outputs.tags }}
           push: false
           pull: true
