--- a/.github/workflows/docker-images.yaml
+++ b/.github/workflows/docker-images.yaml
@@ -39,7 +39,7 @@ jobs:
         id: setuptools
         shell: bash
         run: |
-          python -m pip install setuptools_scm
+          pip install --upgrade setuptools_scm 'setuptools>61'
           echo "version=`python -m setuptools_scm`" >> "$GITHUB_OUTPUT"
 
       - name: Set up Docker Buildx
