--- a/.dockerignore
+++ b/.dockerignore
@@ -1,13 +1,3 @@
-.bookkeeping
-.coverage
-.envrc*
-.github
-.mypy_cache
-.pre-commit-config.yaml
-.pytest_cache
-.python-version
-.vscode
-Dockerfile
-Makefile
-tests
-**/*.pyc
+# More info: https://docs.docker.com/engine/reference/builder/#dockerignore-file
+# Ignore build and test binaries.
+bin/
