--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,27 @@
-.bookkeeping
-.coverage
-*.egg-info
-.mypy_cache
-__pycache__
-.pytest_cache
-.python-version
+# Binaries for programs and plugins
+*.exe
+*.exe~
+*.dll
+*.so
+*.dylib
+bin/*
+Dockerfile.cross
+
+# Test binary, built with `go test -c`
+*.test
+
+# Output of the go coverage tool, specifically when used with LiteIDE
+*.out
+
+# Go workspace file
+go.work
+
+# Kubernetes Generated files - skip generated files, except for vendored files
+!vendor/**/zz_generated.*
+
+# editor and IDE paraphernalia
+.idea
 .vscode
-.ruff_cache
+*.swp
+*.swo
+*~
