--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -18,6 +18,7 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version: '1.22.6'
+          cache-dependency-path: go.sum
       - name: Build
         run: make build
       - name: Test
