Adds status and conditions for `PrefectServer` and `PrefectWorkPool`
It's standard practice with Kubernetes controllers to maintain some status
fields describing the observed state of the resource, as well as conditions to
describe some orthogonal sub-statuses.  Here, we add the observed version of
Prefect for both, and how many workers are running.  For conditions, we maintain
one for each of the components (PVC, migration Job, Deployment, and Service)
for the Prefect server, and just the Deployment of the work pool as a starting
point.

Closes #33

[1]: https://maelvls.dev/kubernetes-conditions/
[2]: https://sdk.operatorframework.io/docs/building-operators/golang/advanced-topics/
[3]: https://book-v1.book.kubebuilder.io/basics/status_subresource

--- a/config/crd/bases/prefect.io_prefectservers.yaml
+++ b/config/crd/bases/prefect.io_prefectservers.yaml
@@ -14,7 +14,12 @@ spec:
     singular: prefectserver
   scope: Namespaced
   versions:
-  - name: v1
+  - additionalPrinterColumns:
+    - description: The version of this Prefect server
+      jsonPath: .status.version
+      name: Version
+      type: string
+    name: v1
     schema:
       openAPIV3Schema:
         description: PrefectServer is the Schema for the prefectservers API
@@ -707,6 +712,10 @@ spec:
                   - type
                   type: object
                 type: array
+              version:
+                description: Version is the version of the Prefect Server that is
+                  currently running
+                type: string
             type: object
         type: object
     served: true
