Fix config/examples kustomization
Some files listed here didn't exist, so commented those out.
Then only enabled a couple resources for a minimal working example,
leaving the rest of the options commented out.

--- a/config/samples/kustomization.yaml
+++ b/config/samples/kustomization.yaml
@@ -1,9 +1,10 @@
 ## Append samples of your project ##
 resources:
   - v1_prefectserver_sqlite.yaml
-  - _v1_prefectserver_sqlite.yaml
-  - v1_prefectserver_postgres.yaml
-  - _v1_prefectserver_postgres.yaml
-  - v1_prefectworkpool.yaml
-  - _v1_prefectworkpool.yaml
+  - v1_prefectworkpool_process.yaml
+  # - v1_prefectserver_ephemeral.yaml
+  # - v1_prefectserver_postgres.yaml
+  # - v1_prefectserver_sqlite.yaml
+  # - v1_prefectworkpool_kubernetes.yaml
+  # - v1_prefectworkpool_process.yaml
 #+kubebuilder:scaffold:manifestskustomizesamples
