--- a/config/crd/bases/prefect.io_prefectservers.yaml
+++ b/config/crd/bases/prefect.io_prefectservers.yaml
@@ -716,6 +716,8 @@ spec:
                 description: Version is the version of the Prefect Server that is
                   currently running
                 type: string
+            required:
+            - version
             type: object
         type: object
     served: true
