--- a/config/crd/bases/prefect.io_prefectworkpools.yaml
+++ b/config/crd/bases/prefect.io_prefectworkpools.yaml
@@ -281,6 +281,9 @@ spec:
                 description: Version is the version of the Prefect Worker that is
                   currently running
                 type: string
+            required:
+            - readyWorkers
+            - version
             type: object
         type: object
     served: true
