--- a/.mise.toml
+++ b/.mise.toml
@@ -5,4 +5,5 @@ golangci-lint = '1.57.2'
 kube-controller-tools = '0.14.0'
 kubectl = '1.31'
 kustomize = '5.3.0'
+operator-sdk = '1.36.1'
 setup-envtest = '0.17.0'
