--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -19,11 +19,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-      - name: Setup Go
-        uses: actions/setup-go@v5
-        with:
-          go-version: '1.22.6'
-          cache-dependency-path: go.sum
+      - uses: jdx/mise-action@v2
       - name: Build
         run: make build
       - name: Test
