Adds `Ready` status boolean for `PrefectServer` and `PrefectWorkPool`
For both of these, `Ready` will be true when there is at least one ready
replica of the underlying deployment.  While working on this, I also noticed
that we were _always_ attempting to add a condition, even if nothing had
changed (and thus the condition struct was empty), which would lead to quiet
errors with all further reconciliations.  Now we'll exit early if the condition
isn't populated, report errors if we can't update the status, and explicitly
update the status when non-conditions are changed.

Fixes #49

--- a/config/crd/bases/prefect.io_prefectservers.yaml
+++ b/config/crd/bases/prefect.io_prefectservers.yaml
@@ -19,6 +19,10 @@ spec:
       jsonPath: .status.version
       name: Version
       type: string
+    - description: Whether this Prefect server is ready to receive requests
+      jsonPath: .status.ready
+      name: Ready
+      type: boolean
     name: v1
     schema:
       openAPIV3Schema:
@@ -768,11 +772,16 @@ spec:
                   - type
                   type: object
                 type: array
+              ready:
+                description: Ready indicates that the PrefectServer is ready to serve
+                  requests
+                type: boolean
               version:
-                description: Version is the version of the Prefect Server that is
-                  currently running
+                description: Version is the version of the PrefectServer that is currently
+                  running
                 type: string
             required:
+            - ready
             - version
             type: object
         type: object
