Fix environment variable name
Co-authored-by: Chris Guidry <chris@theguidrys.us>

--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -63,7 +63,7 @@ spec:
         args:
         - --leader-elect
         env:
-        - name: WATCH_NAMESPACE
+        - name: WATCH_NAMESPACES
           # This restricts the Operator to watch objects in the same
           # namespace where it is deployed.
           valueFrom:
