--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -31,6 +31,7 @@ jobs:
 
   build-and-push-docker-image:
     runs-on: ubuntu-latest
+    environment: ${{ github.event_name == 'release' && 'prod' || 'dev' }}
     steps:
       - uses: actions/checkout@v4
       - name: Set up Docker Buildx
