--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -31,6 +31,10 @@ jobs:
 
   build-and-push-docker-image:
     runs-on: ubuntu-latest
+    # The GitHub environments are created by Terraform and map to Docker Hub repositories:
+    # - dev: https://hub.docker.com/r/prefecthq/prefect-operator-dev
+    # - prod: https://hub.docker.com/r/prefecthq/prefect-operator
+    # The environment will be 'prod' if the GitHub event is a release. Otherwise, it will be 'dev'.
     environment: ${{ github.event_name == 'release' && 'prod' || 'dev' }}
     steps:
       - uses: actions/checkout@v4
@@ -40,6 +44,8 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
+          # These credentials are managed in Terraform. Depending on the 'environment' value above,
+          # these will either be the credentials for 'dev' or 'prod'.
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
