--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -3,7 +3,8 @@ name: Release
 
 on:
   release:
-    types: [published]
+    types:
+      - published
   pull_request:
     branches:
       - main
