--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -34,6 +34,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: gh release upload ${{github.event.release.tag_name}} prefect-crds.yaml prefect.yaml
+        needs: unit-tests
 
   build-and-push-docker-image:
     runs-on: ubuntu-latest
@@ -77,3 +78,4 @@ jobs:
           push: true
           tags: ${{ steps.metadata.outputs.tags }}
           labels: ${{ steps.metadata.outputs.labels }}
+        needs: unit-tests
