Fix Docker image name for prod environment
Looks like GitHub's evaluation logic will return 'false' if the
condition doesn't match, so let's specifically apply an empty string
instead.

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -83,7 +83,7 @@ jobs:
         id: metadata
         uses: docker/metadata-action@v5
         with:
-          images: prefecthq/prefect-operator${{ github.event_name == 'pull_request' && '-dev' }}
+          images: prefecthq/prefect-operator${{ github.event_name == 'pull_request' && '-dev' || '' }}
           tags: |
             type=ref,event=pr
             type=ref,event=branch
